# template

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  util.rs
src/commands/: apply.rs  applygit.rs  mod.rs
