[package]
name = "templatemgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cargo_toml = "0.15.2"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
crossterm = "0.27.0"
dialoguer = { version = "0.10.4", features = ["completion", "fuzzy-select", "fuzzy-matcher", "history"] }
directories = "4.0.1"
dirs = "4.0.0"
env_logger = "0.10.0"
fs_extra = "1.3.0"
handlebars = "4.4.0"
ignore = "0.4.20"
minijinja = "0.30.6"
notify = { version = "5.1.0", features = ["serde"] }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
toml = "0.7.2"
walkdir = "2.3.2"
